--- a/_posts/2023-10-23-food-assistance-project.html
+++ b/_posts/2023-10-23-food-assistance-project.html
@@ -24,119 +24,81 @@ author: Vernon
             <p></p>
             <div class="media">
                 <div class="container">
-                    <div class="media-body">
-                        <div class="row">
-                            <div class="container">
-                                <h4 class="mt-0">{{ page.title }}</h4>
-                                <p>AEHCA Inc. has the ability to effect the conditions in which many
-                                    of the poverty stricken families have to live in. The most in
-                                    need are from the Indigenous population of Guatemala. 54% of the
-                                    population is considered Indigenous.
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h4 class="font-weight-bolder"> {{ page.title }}</h4>
+                            <p></p>
+                            <div class="media-body">
+                                <p>If you know anything about the history of AEHCA you already know a lot of our early
+                                    activities were providing food relief during the COVID-19 pandemic. Thankfully
+                                    that’s passed, and this year we’ve seen our partners in Ipala look at how hunger
+                                    might have changed and what we should do to adjust. We found that most of the unmet
+                                    food need in the community is among senior citizens and in rural areas. A first
+                                    distribution to address our more refined understanding of hunger here took place in
+                                    August and another will take place in October. At that point we will review again
+                                    and form a more long-term plan about how we can best help to reduce hunger and how
+                                    best to form partnerships with other organizations working in the area.
                                 </p>
-                                <p>According to the UNICEF data, four out of 10 children under the
-                                    age of 5 suffer from poor nutrition. This issue is even worse for
-                                    the indigenous population since eight out of 10 children, or
-                                    double more than the average, suffer from the same problem.
-                                    Health-wise problems at an early age can affect growth, both
-                                    cognitively and physically. From 2010 to 2015, mortality in
-                                    children under 5 was 35 deaths a year per 1,000 live births.</p>
-                                <p>There are currently over 500,000 orphans in Guatemala and one
-                                    child is abandoned every 4 days. Vulnerable families are
-                                    especially in need of our support. Lacking support, safe work, or
-                                    daycare services, many families in Guatemala struggle to provide
-                                    adequate care for their children. </p>
-                                <h4 class="mt-0">How does our Organization support with health needs?</h4>
-                                <p>An important part of our health work is centered around improving
-                                    aspects of community health. Poor health may be a factor limiting
-                                    the abilities of families to access education, earn income and
-                                    participate in their communities. Our Community Health Program is
-                                    built on two elements: Nutrition and Shelter. The two most basic
-                                    needs. </p>
-                                <p>We provide food during the Covid-19 pandemic.</p>
-                                <p>We provide families with housing and efficient smokeless cookstoves
-                                    in an effort to reduce the prevalence of preventable disease. </p>
-                                <p>We provide support to a Seniors Center that provides health and
-                                    nutritional support to the elderly, at the same time connecting
-                                    them with younger members of the community. </p>
-                                <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
-                                <div class="col">
-                                    <div id="healthCarousel" class="carousel slide" data-ride="carousel">
-                                        <ol class="carousel-indicators">
-                                            <li data-target="#healthCarousel" data-slide-to="0" class="active"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="1"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="2"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="3"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="4"></li>
-                                        </ol>
-                                        <div class="carousel-inner">
-                                            <div class="carousel-item active">
-                                                <img src="/images/health-house-no-stove.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Home without Smokeless Stove - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Home with soot from cooking without
-                                                        smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-no-stove-1.jpg" class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stoveless - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Home with soot from cooking without
-                                                        smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-chimney-1.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove Chimney - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Chimney for the smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-delivery-1.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove Delivery - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Delivering the new smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-1.jpg" class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Moving the new smokeless stove base
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a class="carousel-control-prev" href="#healthCarousel" role="button"
-                                            data-slide="prev">
-                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                            <span class="sr-only">Previous</span>
-                                        </a>
-                                        <a class="carousel-control-next" href="#healthCarousel" role="button"
-                                            data-slide="next">
-                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                            <span class="sr-only">Next</span>
-                                        </a>
-                                    </div>
-                                </div>
                             </div>
                         </div>
-                        <hr class="my-4">
-                        <p class="font-weight-bold">Read another post from our team below.</p>
-                        <div class="list-group">
-                            {% for post in site.posts %}
-                            {% if page.title == post.title %}
-                            <a class="list-group-item list-group-item-action active" href="{{ post.url }}">{{ post.title
-                                }}</a>
-                            {% else %}
-                            <a class="list-group-item list-group-item-action" href="{{ post.url }}">{{ post.title }}</a>
-                            {% endif %}
-                            {% endfor %}
+                        <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+                        <div class="col">
+                            <div id="foodCarousel" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#foodCarousel" data-slide-to="0" class="active"></li>
+                                    <li data-target="#foodCarousel" data-slide-to="1"></li>
+                                    <li data-target="#foodCarousel" data-slide-to="2"></li>
+                                    <li data-target="#foodCarousel" data-slide-to="3"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="/images/food_1.png" class="d-block w-100 rounded"
+                                            alt="food distribution">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/images/food_2.png" class="d-block w-100 rounded"
+                                            alt="food distribution">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/images/food_3.png" class="d-block w-100 rounded"
+                                            alt="food distribution">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/images/food_4.png" class="d-block w-100 rounded"
+                                            alt="food distribution">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#foodCarousel" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#foodCarousel" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                            <!-- END PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
                         </div>
                     </div>
+                    <p></p>
+                    <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+                    <img src="/images/food_solo.png" width="100%" height="auto" class="pb-2 rounded mx-auto d-block"
+                        alt="food distribution">
+
+                    <hr class="my-4">
+                    <p class="font-weight-bold">Read another post from our team below.</p>
+                    <div class="list-group">
+                        {% for post in site.posts %}
+                        {% if page.title == post.title %}
+                        <a class="list-group-item list-group-item-action active" href="{{ post.url }}">{{ post.title
+                                }}</a>
+                        {% else %}
+                        <a class="list-group-item list-group-item-action" href="{{ post.url }}">{{ post.title }}</a>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
                 </div>
+            </div>
+        </div>
+    </div>
 </main>
